Fix: CSV Creation

--- a/SpotifyPrediction.ipynb
+++ b/SpotifyPrediction.ipynb
@@ -202,19 +202,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carregar o arquivo sample_submission.csv como template\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Carregar arquivo de teste\n",
+    "test_data = pd.read_csv('Data\\\\test.csv')\n",
+    "\n",
+    "# 2. Fazer pré-processamento necessario\n",
+    "test_data_encoded = pd.get_dummies(test_data, columns=['track_genre'], drop_first=True)\n",
+    "\n",
+    "# Certificando de que test_data_encoded tenha as mesmas colunas que foram usadas no modelo treinado\n",
+    "X_test = test_data_encoded.drop(columns=['track_unique_id', 'track_id', 'artists', 'album_name', 'track_name'], errors='ignore')\n",
+    "\n",
+    "# 3. Fazer previsões usando o modelo treinado\n",
+    "y_test_pred = best_rf_model.predict(X_test)\n",
+    "\n",
+    "# 4. Carregar arquivo sample_submission.csv como template\n",
     "sample_submission = pd.read_csv('Data\\\\sample_submission.csv')\n",
     "\n",
-    "# Fazer previsões no conjunto de teste (X_test)\n",
-    "y_test_pred = best_rf_model.predict(X_test) \n",
+    "# 5. Verificar se o número de previsões é igual ao número de linhas no arquivo de submissão\n",
+    "if len(y_test_pred) == len(sample_submission):\n",
+    "    # Preencher a coluna 'popularity_target' com as previsões\n",
+    "    sample_submission['popularity_target'] = y_test_pred\n",
     "\n",
-    "# Preencher a coluna 'popularity_target' com as previsões\n",
-    "sample_submission['popularity_target'] = y_test_pred\n",
-    "\n",
-    "# Salvar o arquivo de submissão\n",
-    "sample_submission.to_csv('Resultado.csv', index=False)\n",
-    "\n",
-    "print(\"imprimido\")\n"
+    "    # 6. Salvar o arquivo de submissão\n",
+    "    sample_submission.to_csv('Resultado.csv', index=False)\n",
+    "    print(\"Arquivo 'resultado.csv' criado com sucesso\")\n",
+    "else:\n",
+    "    print(\"Erro: O número de previsões não é igual\")\n"
    ]
   }
  ],
